# ansl

./: Makefile.am  atexit.c  autogen.sh  configure.ac  crypt.c  grp.c  locale.c  pwd.c  sem.c  shm.c  wchar.c  zlib.pc.in
fplutil/: print.c
sys/: sem.h  shm.h
